# dalma_jedlicska_leather

./: .gitignore  Makefile  README.md  erl_crash.dump  justfile  nixpacks.toml  pyproject.toml  start  tailwind.config.js
app/: main.py
locales/en/LC_MESSAGES/: messages.po
locales/hu/LC_MESSAGES/: messages.po
src/dalma_jedlicska_leather/: __init__.py  services.py
src/dalma_jedlicska_leather/domain/: __init__.py  images.py  locale.py  product.py
src/dalma_jedlicska_leather/repositories/: __init__.py  products.py
src/dalma_jedlicska_leather/services/: __init__.py  locales.py  models.py  products.py  slideshow.py  stories.py
static/css/: style.css  styles.css
tailwindcss/: compile_css  input.css  tailwind.config.js
templates/: 404.html  base.html  collections.html  home.html  info.html  product.html  products.html  stories.html  story.html
templates/components/: category_selector.html  facebook_icon.html  fade_image.html  footer.html  go_top.html  instagram_icon.html  lang_selector.html  lazy_image.html  logo.html  main_button.html  nav.html  price_display.html  product_details_panel.html  product_order_form.html  product_order_success.html  product_summary_panel.html
tests/e2e/: conftest.py  test_generate_pages.py
tests/integration/: test_root.py
