[tool.poetry]
name = "dalma-jedlicska-leather"
version = "0.1.0"
description = ""
authors = ["Gergő Jedlicska <gergo@jedlicska.com>"]
readme = "README.md"
packages = [{include = "src/dalma_jedlicska_leather"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
isort = "^5.11.3"
black = "^22.12.0"


[tool.poetry.group.app.dependencies]
fastapi = {extras = ["all"], version = "^0.88.0"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}
jinja2 = "^3.1.2"


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
