[tool.poetry]
name = "dalma-jedlicska-leather"
version = "0.1.0"
description = ""
authors = ["Gergő Jedlicska <gergo@jedlicska.com>"]
readme = "README.md"
packages = [{ include = "dalma_jedlicska_leather", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
babel = "^2.11.0"
starlette-babel = "^0.2.2"
attrs = "^22.2.0"

# [tool.poetry.group.app.dependencies]
fastapi = { extras = ["all"], version = "^0.87.0" }
uvicorn = { extras = ["standard"], version = "^0.20.0" }
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
# [tool.poetry.group.dev.dependencies]
mypy = "^0.991"
isort = "^5.11.3"
black = "^22.12.0"
djlint = "^1.19.10"
httpx = "^0.23.1"
pytest = "^7.2.0"
pytest-pretty = "^0.0.1"

[tool.isort]
profile = "black"

[tool.djlint]
profile = "jinja"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
