[tool.poetry]
name = "dalma-jedlicska-leather"
version = "0.1.0"
description = ""
authors = ["Gergő Jedlicska <gergo@jedlicska.com>"]
readme = "README.md"
packages = [
  { include = "dalma_jedlicska_leather", from = "src" },
  { include = "app" },
]


[tool.poetry.dependencies]
python = "^3.11"
babel = "^2.13.1"
starlette-babel = "^1.0.0"
attrs = "^23.1.0 "
fastapi = { extras = ["all"], version = "^0.104.1" }
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
jinja2 = "^3.1.2"
gunicorn = "^21.2.0"
arel = "^0.2.0"
python-multipart = "^0.0.6"
mailjet_rest = "^1.3.4"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
isort = "^5.11.3"
black = "^22.12.0"
djlint = "^1.19.10"
httpx = "^0.23.1"
pytest = "^7.2.0"
pytest-pretty = "^0.0.1"
debugpy = "^1.6.6"
ruff-lsp = "^0.0.23"
devtools = "^0.12.2"

[tool.isort]
profile = "black"

[tool.djlint]
profile = "html"
indent = 2
ignore = "J018"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
